# tarvia-validation

./: .gitignore  INSTALL.md  README.md  expert_comparison_kit.md  pyproject.toml  requirements-test.txt  requirements.txt  verify_setup.py
tests/: conftest.py
tests/integration/: test_orchestrator.py
tests/unit/: test_components.py
validation/: generate_synthetic_cohort.py  run_cohort_validation.py
validation/cohorts/: synthetic_50_patients.json
validation/reports/: cohort_validation_results.json
