[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tarvia-validation"
version = "0.1.0"
description = "Validation framework for TARVIA oncology AI platform: integration tests, synthetic cohorts, expert comparison."
readme = "README.md"
requires-python = ">=3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --tb=short"
